--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="sign_out">Sign Out</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="dialog_message">A user has requested holidays</string>
+    <string name="dialog_message">This worker has requested holidays. Those days are marked in red</string>
     <string name="dialog_title">Holidays Request</string>
 </resources>
